[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/tiles/16.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/2.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/14.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/BG/BG.png" type="Texture" id=5]
[ext_resource path="res://assets/Object/SnowMan.png" type="Texture" id=6]
[ext_resource path="res://assets/Object/Crystal.png" type="Texture" id=7]
[ext_resource path="res://src/Levels/Level_One.gd" type="Script" id=8]
[ext_resource path="res://assets/tiles/9.png" type="Texture" id=9]
[ext_resource path="res://src/HUD/HUD_INGAME.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Actors/Dino.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Others/InvisibleWall.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Object/Sign_1.png" type="Texture" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 128, 0, 128, 93, 0, 93 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="TileSet" id=5]
0/name = "2.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
4/name = "16.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 4 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "14.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 128, 93 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 11 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "9.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 13 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0

[sub_resource type="ImageTexture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 193, 0, 193, 210, 0, 210 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 97, 0, 97, 78, 0, 78 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 90, 0, 90, 94, 0, 94 )

[sub_resource type="TileSet" id=8]
0/name = "SnowMan.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 193, 210 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 7 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Crystal.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 97, 78 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 9 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Sign_1.png 2"
2/texture = ExtResource( 13 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 90, 94 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 14 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 1400.5, 10 )

[sub_resource type="SegmentShape2D" id=15]
a = Vector2( 288, 400 )
b = Vector2( 288, 144 )

[node name="Level_One" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, 520 )
z_index = 1

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 5 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65534, 0, 0, 97, 0, 0, 131070, 0, 0, 65633, 0, 0, 196606, 0, 0, 131169, 0, 0, 262142, 0, 0, 196705, 0, 0, 327678, 0, 0, 262241, 0, 0, 393214, 0, 0, 327777, 0, 0, 458750, 0, 0, 393313, 0, 0, 524286, 0, 0, 458776, 5, 0, 458778, 0, 0, 458780, 0, 0, 458782, 0, 0, 458784, 0, 0, 458786, 4, 0, 458849, 0, 0, 589822, 0, 0, 524385, 0, 0, 655358, 0, 0, 589834, 5, 0, 589836, 0, 0, 589838, 0, 0, 589840, 4, 0, 589921, 0, 0, 720894, 0, 0, 655457, 0, 0, 786430, 0, 0, 720993, 0, 0, 851966, 0, 0, 786436, 5, 0, 786438, 0, 0, 786440, 4, 0, 786529, 0, 0, 917502, 0, 0, 852065, 0, 0, 983038, 0, 0, 917601, 0, 0, 1048574, 0, 0, 983137, 0, 0, 1114110, 0, 0, 1048656, 5, 0, 1048658, 0, 0, 1048660, 0, 0, 1048662, 0, 0, 1048673, 0, 0, 1179646, 0, 0, 1114112, 0, 0, 1114114, 0, 0, 1114116, 0, 0, 1114118, 0, 0, 1114120, 0, 0, 1114122, 0, 0, 1114124, 0, 0, 1114126, 0, 0, 1114128, 0, 0, 1114130, 0, 0, 1114132, 0, 0, 1114134, 0, 0, 1114136, 0, 0, 1114138, 0, 0, 1114140, 0, 0, 1114142, 0, 0, 1114144, 0, 0, 1114146, 0, 0, 1114148, 4, 0, 1114174, 5, 0, 1114176, 0, 0, 1114178, 0, 0, 1114180, 4, 0, 1114209, 0, 0, 1179692, 0, 0, 1179694, 0, 0, 1179696, 0, 0, 1179700, 0, 0, 1179702, 0, 0, 1179706, 0, 0, 1179720, 0, 0, 1179722, 0, 0, 1179730, 6, 0, 1179732, 6, 0, 1179734, 6, 0, 1179736, 0, 0, 1179738, 0, 0, 1179740, 0, 0, 1179742, 0, 0, 1179744, 0, 0, 1179745, 0, 0, 1245248, 6, 0, 1245250, 6, 0 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 6 )

[node name="Bg" type="Sprite" parent="Background"]
position = Vector2( 1550, 308.75 )
scale = Vector2( 1.72667, 0.68813 )
z_index = -1
texture = ExtResource( 5 )

[node name="Decoration" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 8 )
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( 262173, 0, 0, 393242, 1, 0, 393244, 1, 0, 393248, 1, 0, 524301, 1, 0, 524303, 1, 0, 720904, 1, 0, 917517, 0, 0, 983134, 0, 0, 1048598, 1, 0, 1048604, 1, 0, 1048607, 1, 0, 1048611, 1, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 32, 520 )
current = true
limit_left = 0
limit_top = -2
limit_right = 3101
limit_bottom = 600
smoothing_enabled = true
editor_draw_limits = true

[node name="HUD_INGAME" parent="Camera2D" instance=ExtResource( 10 )]

[node name="Hole" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hole"]
position = Vector2( 1399.5, 616 )
shape = SubResource( 12 )

[node name="Dino" parent="." instance=ExtResource( 11 )]
position = Vector2( 648, 528 )

[node name="Dino2" parent="." instance=ExtResource( 11 )]
position = Vector2( 816, 208 )

[node name="InvisibleWall" parent="." instance=ExtResource( 12 )]
position = Vector2( 512, 536 )

[node name="InvisibleWall2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1208, 536 )

[node name="InvisibleWall3" parent="." instance=ExtResource( 12 )]
position = Vector2( 768, 224 )

[node name="InvisibleWall4" parent="." instance=ExtResource( 12 )]
position = Vector2( 1144, 216 )

[node name="End" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
position = Vector2( 5728, 752 )
shape = SubResource( 15 )

[connection signal="ready" from="." to="." method="_on_Level_One_ready"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="body_entered" from="End" to="." method="_on_End_body_entered"]
